<docs> add Drone assets and settings

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Map/TempMap.TempMap
+EditorStartupMap=/Game/Map/TempMap.TempMap
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
@@ -147,8 +148,8 @@ r.SupportLowQualityLightmaps=True
 r.SupportPointLightWholeSceneShadows=True
 r.Shadow.TranslucentPerObject.ProjectEnabled=False
 r.Water.SingleLayerWater.SupportCloudShadow=False
-r.Substrate=False
-r.Substrate.OpaqueMaterialRoughRefraction=False
+r.Substrate=True
+r.Substrate.OpaqueMaterialRoughRefraction=True
 r.Refraction.Blur=True
 r.Substrate.Debug.AdvancedVisualizationShaders=False
 r.Substrate.EnableLayerSupport=False
