<feat> add default GM / GI

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,8 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Map/TempMap.TempMap
 EditorStartupMap=/Game/Map/TempMap.TempMap
+GlobalDefaultGameMode=/Game/Bluprint/BP_LRGameMode.BP_LRGameMode_C
+GameInstanceClass=/Game/Bluprint/BP_LRGameInstance.BP_LRGameInstance_C
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
