--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -256,3 +256,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/LastRequiem.K_DroneData.DRONE_MAX_SPEED",NewName="/Script/LastRequiem.K_DroneData.DRONE_MOVE_FORCE")
