<feat> add BaseUIWidget class

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -259,3 +259,4 @@ ManualIPAddress=
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/LastRequiem.K_DroneData.DRONE_MAX_SPEED",NewName="/Script/LastRequiem.K_DroneData.DRONE_MOVE_FORCE")
++PropertyRedirects=(OldName="/Script/LastRequiem.K_BaseUIWidget.layer",NewName="/Script/LastRequiem.K_BaseUIWidget.UILayer")
