<docs> 기본 프로젝트 세팅 맵 변경 - test Union

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Map/TempMap.TempMap
-EditorStartupMap=/Game/Map/TempMap.TempMap
+GameDefaultMap=/Game/Map/Test/TestMap_Union.TestMap_Union
+EditorStartupMap=/Game/Map/Test/TestMap_Union.TestMap_Union
 GlobalDefaultGameMode=/Game/Bluprint/BP_LRGameMode.BP_LRGameMode_C
 GameInstanceClass=/Game/Bluprint/BP_LRGameInstance.BP_LRGameInstance_C
 
@@ -260,3 +260,5 @@ ManualIPAddress=
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/LastRequiem.K_DroneData.DRONE_MAX_SPEED",NewName="/Script/LastRequiem.K_DroneData.DRONE_MOVE_FORCE")
 +PropertyRedirects=(OldName="/Script/LastRequiem.K_BaseUIWidget.layer",NewName="/Script/LastRequiem.K_BaseUIWidget.UILayer")
++PropertyRedirects=(OldName="/Script/LastRequiem.K_BaseUIWidget.OnCloseUIRequested",NewName="/Script/LastRequiem.K_BaseUIWidget.onCloseUIRequested")
+
