--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -108,7 +108,7 @@ bSkipMovies=False
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
 +IniSectionDenylist=/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings
-+MapsToCook=(FilePath="TestMap_Union")
++MapsToCook=(FilePath="/Game/Map/PJB/TestMap")
 +DirectoriesToAlwaysCook=(Path="/NNEDenoiser")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
