Chore : Package Setting Changed

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Map/Test/TestMap_Union.TestMap_Union
-EditorStartupMap=/Game/Map/Test/TestMap_Union.TestMap_Union
+GameDefaultMap=/Game/Map/PJB/TestMap.TestMap
+EditorStartupMap=/Game/Map/PJB/TestMap.TestMap
 GlobalDefaultGameMode=/Game/Bluprint/BP_LRGameMode.BP_LRGameMode_C
 GameInstanceClass=/Game/Bluprint/BP_LRGameInstance.BP_LRGameInstance_C
 
