<fix> 회복스킬 로직 수정

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Map/PJB/TestMap.TestMap
-EditorStartupMap=/Game/Map/PJB/TestMap.TestMap
+GameDefaultMap=/Game/Map/Test/Test_Map_Union.Test_Map_Union
+EditorStartupMap=/Game/Map/Test/Test_Map_Union.Test_Map_Union
 GlobalDefaultGameMode=/Game/Bluprint/BP_LRGameMode.BP_LRGameMode_C
 GameInstanceClass=/Game/Bluprint/BP_LRGameInstance.BP_LRGameInstance_C
 
