<fix> fix the asset allocation problem

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -268,4 +268,5 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/LastRequiem.K_DroneController.HandleRetreatButtonClicked",NewName="/Script/LastRequiem.K_DroneController.HandleUnitRetreatButtonClicked")
 +PropertyRedirects=(OldName="/Script/LastRequiem.K_DroneController.cachedMapWidget",NewName="/Script/LastRequiem.K_DroneController.cachedMiniMapUI")
 +FunctionRedirects=(OldName="/Script/LastRequiem.K_DroneController.HandleQuitButtonClicked",NewName="/Script/LastRequiem.K_DroneController.HandleQuitGameButtonClicked")
++FunctionRedirects=(OldName="/Script/LastRequiem.K_DroneController.HandleUICloseReqeust",NewName="/Script/LastRequiem.K_DroneController.HandleUICloseRequest")
 
