--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -113,3 +113,6 @@ bSkipMovies=False
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
 
+[/Script/AIModule.AISense_Sight]
+MaxTracesPerTick=100
+MaxAsyncTracesPerTick=50
