Feat: 적 구조물 코드 생성

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -1,3 +1,4 @@
+;METADATA=(Diff=true, UseCommands=true)
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -12,6 +13,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Drone",DevComment="")
 +GameplayTagList=(Tag="Enemy",DevComment="")
 +GameplayTagList=(Tag="Enemy.Melee",DevComment="")
++GameplayTagList=(Tag="Enemy.Obstacle",DevComment="")
 +GameplayTagList=(Tag="Enemy.Range",DevComment="")
 +GameplayTagList=(Tag="Environment.Ground",DevComment="")
 +GameplayTagList=(Tag="Environment.Wall",DevComment="")
